# aura-llm-gateway

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  audit.toml  cliff.toml  config.example.yaml  deny.toml  docker-compose.yml  fly.toml  release-plz.toml  vercel.json
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/: CODEOWNERS  CONTRIBUTING.md  PERFORMANCE_OPTIMIZATIONS.md  SECURITY_FIXES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-release.yml  ci.yml  claude-code-review.yml  create-tag.yml  fly-deploy.yml  helm-chart.yml  python-sdk.yml  release-plz.yml  security.yml
api/_lib/: auth.ts  mint-key.ts  normalize-request.ts
api/auth/: [...all].ts
api/beta-signup/: index.ts
api/proxy/: [...path].ts
apps/admin/: package.json  vercel.json
apps/admin/src/: main.tsx
apps/admin/src/components/layout/: Header.tsx
apps/admin/src/lib/: api.ts  types.ts  utils.ts
apps/admin/src/pages/: DashboardPage.tsx  FeaturesPage.tsx  HarnessPage.tsx  InsightsPage.tsx  LoginPage.tsx  OrganizationDetailPage.tsx  PlaygroundPage.tsx  RoutingPage.tsx  SettingsPage.tsx  TeamsPage.tsx
apps/admin/src/stores/: authStore.ts
apps/chat/: .env.example  README.md  package.json  vercel.json
apps/chat/api/_lib/: mint-key.ts
apps/chat/api/proxy/: [...path].ts
apps/chat/src/: App.tsx  main.tsx
apps/chat/src/components/: AuthGate.tsx  BetaUpsellModal.tsx  ChatContainer.tsx  ChatInput.tsx  ComparePane.tsx  CompareView.tsx  DailyQuotaChip.tsx  Header.tsx  MessageBubble.tsx  WelcomeScreen.tsx
apps/chat/src/hooks/: useAgent.ts
apps/chat/src/lib/: agent.ts  animations.ts  api.ts  auth-client.ts  auth.ts  beta-signup.ts  pricing.ts  storage.ts  types.ts  utils.ts
apps/chat/src/stores/: chatStore.ts  quotaStore.ts
apps/landing/: index.html  package.json  tsconfig.json  vite.config.ts
apps/landing/src/: App.tsx  main.tsx  mdx.d.ts
apps/landing/src/components/: Search.tsx
apps/landing/src/components/mdx/: ApiPlayground.tsx  Callout.tsx  Card.tsx  CodeBlock.tsx  CodeTabs.tsx  Expandable.tsx  ModelTable.tsx  Steps.tsx  index.ts
apps/landing/src/content/: _meta.json  architecture.md  configuration.md  credentials.md  deployment.md  index.md  organizations.md  quickstart.md  quickstart.mdx  roadmap.md
apps/landing/src/content/api/: _meta.json  admin.mdx  authentication.md  caching.md  changelog.mdx  compression.mdx  consistency.mdx  conversations.md  cost-tracking.md  create-response.md  errors.md  index.md  metrics.md  rate-limiting.md  rate-limiting.mdx  routing.mdx  streaming.md  validation.mdx
apps/landing/src/content/concepts/: _meta.json  open-responses.md
apps/landing/src/content/guides/: existing-sdks.mdx  migration.mdx  testing.mdx  tool-calling.mdx
apps/landing/src/content/providers/: _meta.json  anthropic.md  bedrock.md  google.md  huggingface.md  mistral.md  ollama.md  openai.md
apps/landing/src/content/sdks/: python.mdx
apps/landing/src/pages/: DocsPage.tsx  RoadmapPage.tsx
crates/aura-core/: CHANGELOG.md  Cargo.toml
crates/aura-core/src/: cache.rs  config.rs  cost.rs  crypto.rs  http.rs  lib.rs  metrics.rs  rate_limit.rs  redis.rs  state.rs
crates/aura-core/src/provider/: anthropic.rs  bedrock.rs  gemini.rs  mistral.rs  mod.rs  openai.rs  together.rs
crates/aura-db/: CHANGELOG.md  Cargo.toml
crates/aura-db/src/: lib.rs  models.rs  repo.rs
crates/aura-proxy/: CHANGELOG.md  Cargo.toml
crates/aura-proxy/src/: main.rs
crates/aura-proxy/src/routes/: admin.rs  auth.rs  conversations.rs  health.rs  metrics.rs  mod.rs  openapi.rs  organizations.rs  rate_limit.rs  responses.rs
crates/aura-types/: CHANGELOG.md  Cargo.toml
crates/aura-types/src/: item.rs  lib.rs  response.rs  stream.rs
deploy/charts/aura-llm-gateway/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/charts/aura-llm-gateway/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: ADMIN_APP_PLAN.md  IMPLEMENTATION_PLAN.md  PROVIDER_MAPPING.md  README.md  architecture.md  team-members.md
docs/api/: README.md  architecture.md  authentication.md  compression.md  cost-tracking.md  create-response.md  feedback.md  organizations.md  sdks.md  streaming.md
docs/architecture/: overview.md
docs/deployment/: fly.md
migrations/: 20250123_002_add_latest_models.sql  20250124_003_add_responses_table.sql  20250125_004_fix_cost_usd_type.sql  20250126_005_api_keys_and_credentials.sql  20250127_006_hierarchical_org_and_end_users.sql  20250128_007_add_claude_model_aliases.sql  20250129_008_end_user_usage_aggregation.sql  20250130_009_allow_global_provider_credentials.sql  20260519_017_playground_auth_camelcase_columns.sql  20260521_019_playground_auth_camelcase_idempotent.sql  20260521_022_dashboard_stats_float8.sql  20260522_020_api_keys_daily_message_limit.sql
scripts/: add_team_member.sh  create_api_key.sh  setup_organization.sh
scripts/bench/: README.md  gateway_adapters.py  harness.py  litellm-config.yaml
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: async_usage.py  basic_usage.py  langchain_usage.py  openai_sdk_compat.py  tools_usage.py
sdks/python/src/aura/: __init__.py  _async_client.py  client.py  exceptions.py  types.py
sdks/python/tests/: test_client.py  test_exceptions.py  test_types.py
