[workspace]
resolver = "2"
members = [
    "crates/aura-types",
    "crates/aura-db",
    "crates/aura-core",
    "crates/aura-proxy",
]

[workspace.package]
version = "0.7.2"
edition = "2021"
authors = ["Umai Tech <team@umai.tech>"]
license = "MIT"
repository = "https://github.com/umaitech/aura-llm-gateway"

[workspace.dependencies]
# Workspace crates
aura-types = { path = "crates/aura-types" }
aura-db = { path = "crates/aura-db" }
aura-core = { path = "crates/aura-core" }

# Async runtime
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }

# Web framework
axum = { version = "0.8", features = ["macros", "json"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros", "migrate"], default-features = false }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures-util = "0.3"
pin-project-lite = "0.2"
bytes = "1.0"

# Cryptography
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"

# Configuration
dotenvy = "0.15"
humantime = "2.1"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
url = "2.5"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Regex (for tests)
regex = "1.10"

# OpenAPI Documentation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# AWS Bedrock
aws-config = { version = "1.5", default-features = false, features = ["rustls", "behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.60", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }

# Development tools
cargo-husky = { version = "1", features = ["user-hooks"] }
