[package]
name = "aura-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-types.workspace = true
aura-db.workspace = true

tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
