[package]
name = "aura-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-types.workspace = true
aura-db.workspace = true

tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
uuid.workspace = true
bytes.workspace = true
rand.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
hex.workspace = true
redis.workspace = true
metrics.workspace = true
url.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
regex.workspace = true
