[package]
name = "aura-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-types.workspace = true
aura-db.workspace = true
aura-core.workspace = true

tokio = { workspace = true, features = ["full"] }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true

[dev-dependencies]
